--- a/InteractiveSystems/Exercise7/index.html
+++ b/InteractiveSystems/Exercise7/index.html
@@ -32,7 +32,7 @@
 		<div class="about" id="c1">
 			<h2>Welcome!</h2>
 			<p> We are Simple Professionalism. We do what you need. <br>
-				Are you need of a website? We can help you out, just contact us. <br>
+				Are you in need of a website? We can help you out, just contact us. <br>
 				You can also take a look at our most recent projects. We promise you, you will not be disappointed!</p>
 		</div>
 
